# cursoVTKgeo

./: .gitignore  README.md
aulas_3dias/: ementa_3dias.txt  slides_3dias.pptx
aulas_3dias/Cubo/: CMakeLists.txt
aulas_3dias/Cubo/dados/: info_grid.txt
aulas_3dias/Cubo/gui/: v3d.cpp
aulas_3dias/CuboSecoes/: CMakeLists.txt
aulas_3dias/CuboSecoes/dados/: cubo.grid
aulas_3dias/CuboSecoes/gui/: v3d.cpp  v3d.h
aulas_3dias/CuboSubSample/: CMakeLists.txt
aulas_3dias/CuboSubSample/dados/: Cobre_grid_params.txt
aulas_3dias/CuboSubSample/gui/: v3d.cpp  v3d.h  v3d.ui
aulas_3dias/CuboSubSample/misc/: util.cpp  util.h
aulas_3dias/Eixos/: CMakeLists.txt
aulas_3dias/Eixos/gui/: v3d.cpp  v3d.ui
aulas_3dias/GeoMod/: CMakeLists.txt  GeoMod.pro  main.cpp  resources.qrc  util.cpp  util.h
aulas_3dias/GeoMod/gui/: mainwindow.cpp  mainwindow.ui
aulas_3dias/GeoMod/viewer3d/: view3dcolortables.cpp  view3dcolortables.h  view3dwidget.cpp  view3dwidget.h  view3dwidget.ui  viewer3dlistwidget.cpp  viewer3dlistwidget.h
aulas_3dias/Grid2D/: CMakeLists.txt
aulas_3dias/Grid2D/gui/: v3d.cpp  v3d.h
aulas_3dias/GridNDV/: CMakeLists.txt  main.cpp
aulas_3dias/GridNDV/gui/: v3d.cpp
aulas_3dias/GridNDV/misc/: util.h
aulas_3dias/HelloVTK/: CMakeLists.txt
aulas_3dias/HelloVTK/gui/: v3d.cpp  v3d.h
aulas_3dias/Horizontes/: CMakeLists.txt
aulas_3dias/Horizontes/gui/: v3d.cpp
aulas_3dias/Horizontes/misc/: util.cpp  util.h
aulas_3dias/HorizontesPickProbe/: CMakeLists.txt
aulas_3dias/HorizontesPickProbe/dados/: horizontes_zonas_prod.grid  parametros_grid.txt
aulas_3dias/HorizontesPickProbe/gui/: v3d.cpp  v3d.h  v3dMouseInteractorStyle.cpp  v3dMouseInteractorStyle.h
aulas_3dias/NuvemPontos/: CMakeLists.txt
aulas_3dias/NuvemPontos/gui/: v3d.cpp
aulas_3dias/NuvemPontos/misc/: util.cpp  util.h
aulas_3dias/NuvemPontosCat/: CMakeLists.txt
aulas_3dias/NuvemPontosCat/gui/: v3d.cpp
aulas_3dias/NuvemPontosVal/: CMakeLists.txt
aulas_3dias/NuvemPontosVal/gui/: v3d.cpp
aulas_3dias/NuvemPontosVal/misc/: util.cpp  util.h
aulas_3dias/PocoLito/: CMakeLists.txt
aulas_3dias/PocoLito/dados/: poco_lito.txt
aulas_3dias/PocoLito/gui/: v3d.cpp
aulas_5dias/: ementa_5dias.txt
